# cpp-interop

./: .gitignore  Cargo.toml  README.md  devenv.nix
code/: Justfile  README.md
code/1_manual_ffi/: Cargo.toml  Justfile  README.md  build.rs
code/1_manual_ffi/cpp/: db.cpp  db.hpp
code/1_manual_ffi/src/: ffi.rs  main.rs  safe.rs
code/2_automatic_ffi/: Cargo.toml  Justfile  README.md  build.rs  wrapper.hpp
code/2_automatic_ffi/cpp/: c_ffi_ext.hpp
code/2_automatic_ffi/src/: main.rs
code/3_bidirectional/: README.md
code/3_bidirectional/autocxx-example/: Cargo.toml  Justfile  build.rs
code/3_bidirectional/autocxx-example/cpp/: db.cpp  db.hpp
code/3_bidirectional/autocxx-example/src/: main.rs
code/3_bidirectional/cxx-example/: Cargo.toml  Justfile  build.rs
code/3_bidirectional/cxx-example/cpp/: db.cpp  db.hpp
code/3_bidirectional/cxx-example/src/: main.rs
code/4_ipc/: Justfile  README.md
code/4_ipc/cpp/: server.cpp  socket.hpp
code/4_ipc/cpp/include/: shared.hpp
code/4_ipc/rust/: Cargo.toml
code/4_ipc/rust/src/: lib.rs
skeleton/autocxx-ffi/: Cargo.toml
skeleton/autocxx-ffi/cpp/: db.cpp  db.hpp
skeleton/c-ffi/: Cargo.toml
skeleton/c-ffi/cpp/: db.cpp  db.hpp
skeleton/c-ffi/src/: main.rs
skeleton/cxx-ffi/: Cargo.toml
skeleton/cxx-ffi/cpp/: db.cpp  db.hpp
skeleton/ipc/cpp/: db.cpp  db.hpp  server.cpp
skeleton/ipc/rust/: Cargo.toml
